Fixed some bugs

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "knip": "knip"
   },
   "dependencies": {
     "@react-three/fiber": "^9.1.2",
@@ -14,6 +15,7 @@
     "animejs": "^4.0.2",
     "framer-motion": "^12.19.2",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.4",
     "next": "15.3.4",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
@@ -23,12 +25,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "knip": "^5.61.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
