--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.177.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "knip": "^5.61.2",
